<resources>
    <string name="app_name">BusyAlert</string>
    <string name="text_home">Home</string>
    <string name="text_social">Social</string>
    <string name="text_options">Settings</string>

    <!-- Options -->
    <string name="pref_drive">Activity recognition options</string>
    <string name="opt_bike">Detect bike activity</string>
    <string name="opt_bike_desc">Send notifications when bike activity is detected</string>
    <string name="opt_running">Detect running activity</string>
    <string name="opt_running_desc">Send notifications when running activity is detected</string>
    <string name="pref_user">User options</string>
    <string name="opt_usermane">Username</string>
    <string name="opt_status">Status</string>
    <string name="opt_example_username">John Smith</string>
    <string name="title_activity_settings">Settings</string>
    <string name="status_changed">Your status has changed</string>
    <string name="pref_network">Network options</string>
    <string name="net_usage">Network usage</string>
    <string name="net_desc">Network connectivity required</string>
    <string name="logout">Logout</string>
    <string name="exit">Are you sure you want to logout?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="update">Update contacts</string>
    <string name="contacts_updated">Contacts updated!</string>
    <string name="network_settings">We cannot access to the network so you can\'t save the changes</string>
    <string name="delete">Delete account</string>
    <string name="hiscoric">My historial</string>
    <string name="delete_sure">Are you sure you want to delete your account?</string>


    <!-- SOCIAL -->
    <string name="no_numbers">No phone numbers found</string>
    <string name="opt_delete">Delete from favourites</string>
    <string name="opt_add_favourites">Add to favourites</string>
    <string name="toast_added">Contact %1$s added to favourites!</string>
    <string name="toast_deleted">Contact removed from favourites!</string>
    <string name="search">Search</string>
    <string name="read_conctacts_ok">Read Contacts permission granted</string>
    <string name="read_contacts_no">Read Contacts permission denied</string>
    <string name="empty_list_favourites">Update favourite users</string>
    <string name="empty_list">Update contact list</string>

    <!-- HOME -->
    <string name="username">John Smith</string>
    <string name="userstatus">Available</string>
    <string name="btn_monitoring">Start monitoring</string>
    <string name="btn_monitoring_stop">Stop monitoring</string>
    <string name="btn_notifications">Recive notifications</string>
    <string name="btn_notifications_stop">Stop reciving notifications</string>
    <string name="btn_notifications_premium">Send premium notifications</string>
    <string name="enable_notifications">The notifications are enabled</string>
    <string name="disable_notifications">The notifications are disabled</string>
    <string name="enable_monitoring">Monitoring has started</string>
    <string name="disable_monitoring">Monitoring has stopped</string>
    <string name="network_fail">We cannot access to network so the information will be outdated</string>

    <!-- NOTIFICATIONS -->
    <string name="driving">"You are driving! "</string>
    <string name="driving_bike">"You are driving a bike! "</string>
    <string name="running">You are running!</string>
    <string name="test_notification">This is a test notification.</string>

    <!-- PREMIUM NOTIFICATIONS -->
    <string name="noti_meeting">Meeting</string>
    <string name="noti_sleeping">Sleeping</string>
    <string name="noti_other">Other</string>
    <string name="meeting_toast">Meeting notification sent</string>
    <string name="sleeping_toast">Sleeping notification sent</string>
    <string name="other_toast">Other notification sent</string>

    <!-- LOGIN -->
    <string name="login_username">Email</string>
    <string name="login_password">Password</string>
    <string name="login_button">Log In</string>
    <string name="login_google">Log In with Google Account</string>

    <!-- NETWORK -->
    <string name="wifi_connected">Wi-Fi connected!</string>
    <string name="lost_connection">Wi-Fi connection has been lost</string>
    <string name="register">Register</string>
    <string name="new_account">Create Account</string>
    <string name="repeat_password">Repeat Password</string>

    <!-- LOGIN AND REGISTER -->
    <string name="connection_no">Invalid credentials</string>
    <string name="connection_ok">Connection completed</string>
    <string name="registration_no">Registration failed</string>
    <string name="registration_ok">Registration completed</string>
    <string name="no_password">Passwords not matching</string>
    <string name="bad_password">Password is too short</string>
    <string name="no_mail">Please write a mail</string>
    <string name="phone">Phone</string>
    <string name="no_phone">Please write a phone</string>
    <string name="no_wifi_continue">You have no Wi-Fi network enabled. The registration will use data network. Are you sure to continue?</string>
</resources>
