<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/pref_drive"
        android:key="driving_prefs">


        <SwitchPreference
            android:defaultValue="false"
            android:title="@string/opt_bike"
            android:key="bike"
            android:summary="@string/opt_bike_desc" />
        <SwitchPreference
            android:defaultValue="false"
            android:title="@string/opt_running"
            android:key="running"
            android:summary="@string/opt_running_desc" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_user"
        android:key="user_prefs">

        <EditTextPreference
            android:key="username_key"
            android:title="@string/opt_usermane"
            android:summary="@string/opt_example_username"
            android:dialogTitle="@string/opt_usermane" />
        <ListPreference
            android:title="List preference"
            android:entries="@array/status"
            android:entryValues="@array/status"
            android:key="status" />

    </PreferenceCategory>
</PreferenceScreen>