<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.pau.busyalert.HomeFragment">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="2dp">


        <ImageView
            android:layout_width="130dp"
            android:layout_height="130dp"
            app:srcCompat="@drawable/user"
            android:id="@+id/userPicture"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:layout_marginBottom="20dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/name"
            android:textSize="30sp"
            android:layout_marginTop="10dp"
            android:paddingBottom="10dp"
            android:layout_toRightOf="@+id/userPicture"
            android:textStyle="normal|bold"
            android:text="@string/username"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/status"
            android:textSize="18sp"
            android:layout_below="@+id/name"
            android:layout_alignLeft="@id/name"
            android:text="@string/userstatus" />
    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true">
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_monitoring"
            android:id="@+id/btnMonitoring"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_marginBottom="15dp"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_notifications"
            android:id="@+id/btnNotifications"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_marginBottom="15dp"/>

        <Button
            android:text="@string/btn_notifications_premium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btnPremiumNotifications"
            style="@style/Widget.AppCompat.Button.Borderless.Colored" />
    </LinearLayout>
</RelativeLayout>
