<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.pau.busyalert.Activities.LoginActivity"
    android:padding="15dp">

    <ImageView
        android:layout_width="200dp"
        app:srcCompat="@drawable/logo_red"
        android:id="@+id/imageView"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="40dp"/>

    <TextView
        android:text="@string/login_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:textStyle="normal|bold"
        android:textSize="18sp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/login_username"
        android:ems="10"
        android:id="@+id/editText"
        android:layout_marginBottom="20dp"/>

    <TextView
        android:text="@string/login_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView2"
        android:textSize="18sp"
        android:textStyle="normal|bold" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/editText2"
        android:textSize="18sp"
        android:text="@string/login_password"
        android:layout_marginBottom="20dp"/>

    <Button
        android:text="@string/login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/login_button"
        style="@style/Widget.AppCompat.Button.Colored" />

    <Button
        android:text="@string/login_google"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button2" />
</LinearLayout>
